# adventofcode2024

./: .gitmodules  Cargo.toml
adventofcode-core/: Cargo.toml
adventofcode-core/src/: lib.rs
adventofcode-macro/: Cargo.toml
adventofcode-macro/src/: lib.rs
src/: fetch_input.rs  main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/libs/: cli.rs  file_system.rs  graph.rs  math.rs  mod.rs  parse.rs  problem.rs  telemetry.rs
